results/2bf8e39e1220b855d3315a17c6ac10a7/err_code.txt
Traceback (most recent call last):
  File "./pyfile.py", line 15, in <module>
    from theonlinemcmc import MCMCWrapper
  File "/usr/local/lib/python2.7/dist-packages/theonlinemcmc/MCMCWrapper.py", line 20
    self.theta = theta
                     ^
IndentationError: unindent does not match any outer indentation level
